Revision history for Perl extension IPTables::libiptc.

0.05  Tue Nov 20 12:47:11 2007
	- Bugfix: Include all files in tarball by updating MANIFEST.
	  Version 0.04 could not compile, because the tarball did not
	  contain all the relevant files (ups, didn't keep MANIFEST in
	  sync).

0.04  Thu Nov 15 16:01:16 2007
	- First CPAN release.
	  Primarily documentation updates.

0.03  Thu Jul 13 16:24:07 2006
	- Because libiptc.c contained some bugs, it has been
          necessary to include it the module and compile libiptc.a our
          self.  The module still depends on the iptables extensions
          being available on the system.

0.02  Tue Jul 4 13:17:16 2006
	- First initial working version.

0.01  Thu Jun 22 14:01:55 2006
	- original version; created by h2xs 1.23 with options
		-n IPTables::libiptc include/libiptc/libiptc.h
