@@ -38,7 +38,8 @@ WriteMakefile(
     ($] >= 5.005 ?     ## Add these new keywords supported since 5.005
       (ABSTRACT_FROM  => 'lib/IPTables/libiptc.pm', # retrieve abstract from module
        AUTHOR         => 'Jesper Dangaard Brouer <hawk@comx.dk>') : ()),
-    LIBS              => ['-liptc -ldl -lnsl'], # e.g., '-lm'
+    LIBS              => ['-ldl -lnsl'], # e.g., '-lm'
+#   LIBS              => ['-Llibrary_iptc/ -liptc -ldl -lnsl'], # e.g., '-lm'
     LDDLFLAGS         => '-shared $(LOCAL_LIB_IPTC) -L$(PREFIX)/lib',
     LDFLAGS           => '-L$(PREFIX)/lib',
     DEFINE            => '-DIPTABLES_VERSION=\"$(IPTABLES_VERSION)\" -DIPT_LIB_DIR=\"$(IPTABLES_LIB_DIR)\"',
@@ -47,7 +48,7 @@ WriteMakefile(
                          # e.g., '-I. -I/usr/include/other'
     # Un-comment this if you add C files to link with later:
     # OBJECT            => '$(O_FILES)', # link all the C files too
-    OBJECT            => '$(O_FILES) iptables/iptables.o',
+    OBJECT            => '$(O_FILES) iptables/iptables.o library_iptc/libiptc.a',
                       # link all the C files too
     PREFIX            => '/usr/local',
     TYPEMAPS          => ['libiptc.typemap'],
